--- a/prometheus.conf.tmpl
+++ b/prometheus.conf.tmpl
@@ -1,118 +1,75 @@
-# Global default settings.
-global {
-  scrape_interval: "15s"     # By default, scrape targets every 15 seconds.
-  evaluation_interval: "15s" # By default, evaluate rules every 15 seconds.
+global:
+  scrape_interval:     15s # By default, scrape targets every 15 seconds.
+  evaluation_interval: 15s # By default, scrape targets every 15 seconds.
+  # scrape_timeout is set to the global default (10s).
 
   # Load and evaluate rules in this file every 'evaluation_interval' seconds. This field may be repeated.
   # rule_file: "/etc/prometheus.rules"
-}
 
-# A job definition containing exactly one endpoint to scrape: Here it's prometheus itself.
-job: {
-  # The job name is added as a label `job={job-name}` to any timeseries scraped from this job.
-  name: "prometheus"
-  # Override the global default and scrape targets from this job every 5 seconds.
-  scrape_interval: "30s"
+scrape_configs:
+  # A job definition containing exactly one endpoint to scrape: Here it's prometheus itself.
+  - job_name: "prometheus"
+    # The job name is added as a label `job={job-name}` to any timeseries scraped from this job.
 
-  # Let's define a group of targets to scrape for this job. In this case, only one.
-  target_group: {
-    # These endpoints are scraped via HTTP.
-    target: "http://localhost:9090/metrics"
-  }
-}
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: "30s"
 
-job: {
-  name: "node"
-  scrape_interval: "60s"
-  {{ range $tag, $services := service "prometheus-node-exporter" "any" | byTag }}{{ if $tag }}
-  target_group: {
-    labels: {
-      label: {
-        name:  "tag"
-        value: "{{ $tag }}"
-      }
-    }
-    {{ range $services }}target: "http://{{ .Address }}:{{ .Port }}/metrics"
-    {{ end }}
-  }{{ end }}{{ end }}
-}
+    # Let's define a group of targets to scrape for this job. In this case, only one.
+    target_groups:
+      # These endpoints are scraped via HTTP.
+      - targets: ['localhost:9090/metrics']
+  
+  - job_name: 'node'
+    scrape_interval: 60s
 
-job: {
-  name: "container"
-  scrape_interval: "60s"
-  {{ range $tag, $services := service "prometheus-container-exporter" "any" | byTag }}{{ if $tag }}
-  target_group: {
-    labels: {
-      label: {
-        name:  "tag"
-        value: "{{ $tag }}"
-      }
-    }
-    {{ range $services }}target: "http://{{ .Address }}:{{ .Port }}/metrics"
-    {{ end }}
-  }{{ end }}{{ end }}
-}
+    target_groups:
+    {{ range $tag, $services := service "prometheus-node-exporter" "any" | byTag }}{{ if $tag }}
+      - targets: [ {{ range $services }} '{{ .Address }}:{{ .Port }}']
+      {{ end }}
+    {{ end }}{{ end }}
 
-job: {
-  name: "haproxy"
-  scrape_interval: "60s"
-  {{ range $tag, $services := service "prometheus-haproxy-exporter" "any" | byTag }}{{ if $tag }}
-  target_group: {
-    labels: {
-      label: {
-        name:  "tag"
-        value: "{{ $tag }}"
-      }
-    }
-    {{ range $services }}target: "http://{{ .Address }}:{{ .Port }}/metrics"
-    {{ end }}
-  }{{ end }}{{ end }}
-}
+  - job_name: 'container'
+    scrape_interval: 60s
 
-job: {
-  name: "cloudwatch"
-  scrape_interval: "60s"
-  {{ range $tag, $services := service "prometheus-cloudwatch-exporter" "any" | byTag }}{{ if $tag }}
-  target_group: {
-    labels: {
-      label: {
-        name:  "tag"
-        value: "{{ $tag }}"
-      }
-    }
-    {{ range $services }}target: "http://{{ .Address }}:{{ .Port }}/metrics"
-    {{ end }}
-  }{{ end }}{{ end }}
-}
+    target_groups:
+    {{ range $tag, $services := service "prometheus-container-exporter" "any" | byTag }}{{ if $tag }}
+      - targets: [ {{ range $services }} '{{ .Address }}:{{ .Port }}']
+      {{ end }}
+    {{ end }}{{ end }}
 
-job: {
-  name: "pushgateway"
-  scrape_interval: "60s"
-  {{ range $tag, $services := service "prometheus-pushgateway" "any" | byTag }}{{ if $tag }}
-  target_group: {
-    labels: {
-      label: {
-        name:  "tag"
-        value: "{{ $tag }}"
-      }
-    }
-    {{ range $services }}target: "http://{{ .Address }}:{{ .Port }}/metrics"
-    {{ end }}
-  }{{ end }}{{ end }}
-}
+  - job_name: 'haproxy'
+    scrape_interval: 60s
 
-job: {
-  name: "alertmanager"
-  scrape_interval: "60s"
-  {{ range $tag, $services := service "prometheus-alertmanager" "any" | byTag }}{{ if $tag }}
-  target_group: {
-    labels: {
-      label: {
-        name:  "tag"
-        value: "{{ $tag }}"
-      }
-    }
-    {{ range $services }}target: "http://{{ .Address }}:{{ .Port }}/metrics"
-    {{ end }}
-  }{{ end }}{{ end }}
-}
+    target_groups:
+    {{ range $tag, $services := service "prometheus-haproxy-exporter" "any" | byTag }}{{ if $tag }}
+      - targets: [ {{ range $services }} '{{ .Address }}:{{ .Port }}']
+      {{ end }}
+    {{ end }}{{ end }}
+
+  - job_name: 'cloudwatch'
+    scrape_interval: 60s
+
+    target_groups:
+    {{ range $tag, $services := service "prometheus-cloudwatch-exporter" "any" | byTag }}{{ if $tag }}
+      - targets: [ {{ range $services }} '{{ .Address }}:{{ .Port }}']
+      {{ end }}
+    {{ end }}{{ end }}
+
+  - job_name: 'pushgateway'
+    scrape_interval: 60s
+
+    target_groups:
+    {{ range $tag, $services := service "prometheus-pushgateway" "any" | byTag }}{{ if $tag }}
+      - targets: [ {{ range $services }} '{{ .Address }}:{{ .Port }}']
+      {{ end }}
+    {{ end }}{{ end }}
+
+  - job_name: 'alertmanager'
+    scrape_interval: 60s
+
+    target_groups:
+    {{ range $tag, $services := service "prometheus-alertmanager" "any" | byTag }}{{ if $tag }}
+      - targets: [ {{ range $services }} '{{ .Address }}:{{ .Port }}']
+      {{ end }}
+    {{ end }}{{ end }}
+
